# VibeIDE

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/: app.rs  config.rs  fs.rs  main.rs  plugin.rs  renderer.rs  window.rs
web/ui/: index.html
web/ui/js/: app.js
web/ui/styles/: main.css
