[package]
name = "ultralight_code"
version = "0.1.0"
edition = "2021"
description = "Lightweight VS Code alternative using Rust + Ultralight with VS Code plugin support"
license = "MIT"

[dependencies]
# Window management
winit = "0.29"

# Ultralight bindings (официальный репозиторий)
# Примечание: требуется ручная установка Ultralight SDK
ultralight-sys = { git = "https://github.com/ultralight-ux/Ultralight", optional = true }
ultralight = { git = "https://github.com/ultralight-ux/Ultralight", optional = true }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system utilities
notify = "6.1"
walkdir = "2.4"

# Plugin runtime (QuickJS for lightweight JS execution)
rquickjs = { version = "0.5", features = ["macro"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cross-platform utilities
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

# Alternative: use webview if ultralight fails
webview = { version = "0.10", optional = true }

[features]
default = [] # По умолчанию без рендерера (для быстрой сборки)
renderer = ["ultralight", "ultralight-sys"] # Ultralight rendering (требует ручной установки SDK)
webview-backend = ["webview"] # Альтернативный бэкенд через webview
dev = [] # Development mode with hot-reload

[[bin]]
name = "ultralight_code"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
